# socialpulse

./: .dockerignore  .env.example  Dockerfile  config.py  docker-compose.yml  init.sql  main.py  pyproject.toml
.github/workflows/: ci.yml
analysis/: eda.py  sentiment.py
api/: main.py  schemas.py
collector/: hn_client.py
storage/: cleaner.py  database.py  db_store.py  store.py
tests/: test_analyse_sentiment.py  test_hn_client.py
